# Trans_NeXt_Conv

./: .gitignore  ACTION_PLAN.md  README.md  predict.py  pyproject.toml  requirements.txt  setup.sh
configs/: config.py
scripts/: evaluate.py  predict.py  prepare_data.py  train.py
src/: __init__.py
src/data/: __init__.py  dataloader.py  dataset.py  preprocessing.py
src/evaluation/: __init__.py  evaluator.py
src/losses/: __init__.py  boundary_loss.py  combined_loss.py  dice_loss.py  focal_loss.py  tversky_loss.py  utils.py
src/metrics/: __init__.py  compute_metric.py
src/models/: __init__.py  attention_cnn.py  convnext.py  gating.py  gating_mechanism.py  initialize_model.py  manager_train_MoE.py  nn.py  quantization.py  segformer.py  trans_next_conv.py  unet.py
src/models/attention/: __init__.py  gated_attention.py  scaled_attention.py  vit_attention.py
src/models/crossvit/: __init__.py  cross_transformer.py  crossvit.py  embedder.py  encoder.py
src/models/moe/: __init__.py  experts.py  mixture.py
src/models/transformer/: __init__.py  decoder.py  encoder.py
src/training/: __init__.py  trainer.py
src/visual_architeture/: plot_architeture.py
src/visualization/: __init__.py  plot_architecture.py
tests/: verify_fixes.py
